--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <script src="script.js"></script>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="utility.css">
+  <link rel="icon" type="image/x-icon" href="img/logo.png">
 </head>
 
 <body>
